{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 230,
  "lineage": "09987773-489e-032d-16ec-42fee9fe5c49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for_each",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01e8199206a8d26fb",
            "domain": "vpc",
            "id": "eipalloc-0ada63217c89f3385",
            "instance": "i-0d8266959d3cfb0b9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-038fe4f5499f88502",
            "private_dns": "ip-10-0-100-240.us-east-2.compute.internal",
            "private_ip": "10.0.100.240",
            "public_dns": "ec2-52-15-219-37.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.219.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.my_ami",
            "module.my_ec2.aws_instance.this",
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0abfbb231becca932",
            "domain": "vpc",
            "id": "eipalloc-032d3d9ff3498214c",
            "instance": "i-009f1ceffbd47ef27",
            "network_border_group": "us-east-2",
            "network_interface": "eni-014a81b2122a8bba0",
            "private_dns": "ip-10-0-100-239.us-east-2.compute.internal",
            "private_ip": "10.0.100.239",
            "public_dns": "ec2-18-217-158-243.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.158.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.my_ami",
            "module.my_ec2.aws_instance.this",
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089c6f2e3866f0f14",
            "arn": "arn:aws:ec2:us-east-2:021510583954:instance/i-0d8266959d3cfb0b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8266959d3cfb0b9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-user-publickey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038fe4f5499f88502",
            "private_dns": "ip-10-0-100-240.us-east-2.compute.internal",
            "private_ip": "10.0.100.240",
            "public_dns": "ec2-3-21-158-181.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.158.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d14a282bcdb94389",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0752dee751a475254",
            "tags": {
              "Name": "web_server"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "web_server-1"
            },
            "vpc_security_group_ids": [
              "sg-06ee716d1cfe393e7"
            ]
          },
          "dependencies": [
            "data.aws_ami.my_ami",
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089c6f2e3866f0f14",
            "arn": "arn:aws:ec2:us-east-2:021510583954:instance/i-009f1ceffbd47ef27",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009f1ceffbd47ef27",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-user-publickey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014a81b2122a8bba0",
            "private_dns": "ip-10-0-100-239.us-east-2.compute.internal",
            "private_ip": "10.0.100.239",
            "public_dns": "ec2-3-16-218-108.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.218.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077dc5caa3feed2d6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0752dee751a475254",
            "tags": {
              "Name": "web_server"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "web_server-2"
            },
            "vpc_security_group_ids": [
              "sg-06ee716d1cfe393e7"
            ]
          },
          "dependencies": [
            "data.aws_ami.my_ami",
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:security-group/sg-06ee716d1cfe393e7",
            "description": "Security group for web_server and ssh access",
            "egress": [],
            "id": "sg-06ee716d1cfe393e7",
            "ingress": [],
            "name": "my-sg-20210325054555806700000001",
            "name_prefix": "my-sg-",
            "owner_id": "021510583954",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed156a26a13fbb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2461130851",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06ee716d1cfe393e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-3058157324",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ee716d1cfe393e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3568601714",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ee716d1cfe393e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1648285639",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ee716d1cfe393e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-4190037924",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06ee716d1cfe393e7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_sg.aws_security_group.this",
            "module.my_sg.aws_security_group.this_name_prefix",
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:internet-gateway/igw-0f2522e974ab03af0",
            "id": "igw-0f2522e974ab03af0",
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-igw"
            },
            "vpc_id": "vpc-0ed156a26a13fbb5d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f2522e974ab03af0",
            "id": "r-rtb-0c0b1da79566e88051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0b1da79566e8805",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d51a48f90ca5fdc2",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra-2-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-0ed156a26a13fbb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c0b1da79566e8805",
            "owner_id": "021510583954",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terra-2-vpc-public"
            },
            "vpc_id": "vpc-0ed156a26a13fbb5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049fb10f4eab9fbf5",
            "route_table_id": "rtb-0d51a48f90ca5fdc2",
            "subnet_id": "subnet-0b379cf315d1c4d27"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09799cc0e2b13a940",
            "route_table_id": "rtb-0c0b1da79566e8805",
            "subnet_id": "subnet-0752dee751a475254"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-0b379cf315d1c4d27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b379cf315d1c4d27",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-private-subnet-a"
            },
            "tags_all": {
              "Name": "terra-2-private-subnet-a"
            },
            "vpc_id": "vpc-0ed156a26a13fbb5d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:subnet/subnet-0752dee751a475254",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.100.0/24",
            "id": "subnet-0752dee751a475254",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-public-subnet-a"
            },
            "tags_all": {
              "Name": "terra-2-public-subnet-a"
            },
            "vpc_id": "vpc-0ed156a26a13fbb5d"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:021510583954:vpc/vpc-0ed156a26a13fbb5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080ec9293aae83f67",
            "default_route_table_id": "rtb-0323016439df7b721",
            "default_security_group_id": "sg-0ca3df9a8fa04621c",
            "dhcp_options_id": "dopt-4d630226",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ed156a26a13fbb5d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0323016439df7b721",
            "owner_id": "021510583954",
            "tags": {
              "Name": "terra-2-vpc"
            },
            "tags_all": {
              "Name": "terra-2-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}